# QuantumCircuitOptimizer

./: CHANGELOG.txt  FeatureSelection.ipynb  LICENSE  MANIFEST.in  Main.py  README.md  SynonymGenerator.py  Untitled.ipynb  gates.csv  gatesTemp.csv  main.py  setup.cfg  setup.py
.ipynb_checkpoints/: Main-checkpoint.ipynb  README-checkpoint.md  main-checkpoint.py
Data/: NairobiData.csv  NairobiData2.csv  NairobiDataAVG1.csv  NairobiDataIssues.csv  NairobiDataOld.csv  TorontoData.csv  WashingtonData.csv  gates.csv  ibm_nairobi_calibrations.csv  setup.cfg
Data/.ipynb_checkpoints/: NairobiDataFull-checkpoint.csv
Data/qcoptimizer/: qcoptimizer.py
Data/qcoptimizer.egg-info/: SOURCES.txt
Data/qcoptimizer/.ipynb_checkpoints/: key-checkpoint.csv
OldPkg/: CHANGELOG.txt  setup.cfg
OldPkg/qcoptimizer/: SynonymGenerator.ipynb
Synonym_Database/: key.csv
Synonym_Database/.ipynb_checkpoints/: key-checkpoint.csv
qcoptimizer/: SynonymGenerator.ipynb  __init__.py  gates.csv  key.csv  qcoptimizer.py
qcoptimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
qcoptimizer/.ipynb_checkpoints/: SynonymGenerator-checkpoint.ipynb
qcoptimizer/Synonym_Database/: .csv  gates.csv  key.csv
qcoptimizer/Synonym_Database/.ipynb_checkpoints/: gates-checkpoint.csv
src/qcoptimizer/: PerthSimRegModel.sav  __init__.py
src/qcoptimizer.egg-info/: PKG-INFO  SOURCES.txt
