[metadata]
name = qcoptimizer
version = 0.2.1
author = Taren Patel
author_email = tarenpatel1013@gmail.com
description = A package for quantum circuit optimization
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True